adding static files and html templates

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists individulas that contributed to the content of this repository.
 
 Tebogo Legoabe <tebogoLegoabe5@gmail.com>
+Shakir Muhammedsaid <shakirahmedsalih35756@gmail.com>
